[package]
name = "unix-watch"
version = "0.1.0"
edition = "2021"
description = "Simple rust implementation of the Unix watch command"
repository = "https://github.com/MilesCranmer/unix-watch"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
