[package]
name = "unix-watch"
version = "0.1.0"
edition = "2021"
description = "Simple rust implementation of the Unix watch command"
repository = "https://github.com/MilesCranmer/unix-watch"
documentation = "https://github.com/MilesCranmer/unix-watch"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
gethostname = "0.4"
structopt = "0.3"

[[bin]]
name = "watch"
path = "src/main.rs"
